--- a/example/frame.html
+++ b/example/frame.html
@@ -10,8 +10,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
           integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
           crossorigin="anonymous"></script>
-  <script type="text/javascript" src="../bower_components/event-dispatcher/dist/event-dispatcher.js"></script>
-  <script type="text/javascript" src="../dist/messageport-event-dispatcher.js"></script>
+  <script type="text/javascript" src="../dist/messageport-dispatcher.standalone.js"></script>
   <script type="text/javascript">
     var dispatcher = MessagePortDispatcher.self();
     var name = '';
